fix: Add solid background colour to the header on mobile view.

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -864,6 +864,8 @@ img {
     padding: 0 15px;
     width: 100%;
     height: auto;
+    background-color: var(--green-1);
+    mix-blend-mode: inherit;
   }
 }
 .header__area button {
