--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -38,6 +38,8 @@
       padding: 0 15px;
       width: 100%;
       height: auto;
+      background-color: var(--green-1);
+      mix-blend-mode: inherit;
     }
 
     button {
